--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "ellecto",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.8"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.8",
-    "@eslint/eslintrc": "^3"
-  }
+	"name": "ellecto",
+	"description": "Online store website (Only Front-End).",
+	"version": "0.1.0",
+	"private": true,
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/AryaFardmanesh/Ellecto/issues"
+	},
+	"homepage": "https://github.com/AryaFardmanesh/Ellecto",
+	"author": {
+		"name": "Arya Fardmanesh",
+		"email": "AryaFardmanesh.1383@gmail.com",
+		"url": "https://github.com/AryaFardmanesh"
+	},
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"next": "15.1.8"
+	},
+	"devDependencies": {
+		"typescript": "^5",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.8",
+		"@eslint/eslintrc": "^3"
+	}
 }
