--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"antd": "^5.25.2",
 		"bootstrap": "^5.3.6",
 		"next": "15.1.8",
 		"react": "^19.0.0",
