--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
 		"@ant-design/v5-patch-for-react-19": "^1.0.3",
 		"antd": "^5.25.2",
 		"bootstrap": "^5.3.6",
+		"formik": "^2.4.6",
 		"next": "15.1.8",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"yup": "^1.6.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
