--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noUnusedParameters": false,
+		"noUnusedLocals": false,
 		"jsx": "preserve",
 		"incremental": true,
 		"plugins": [
